--- a/my_home_page.html
+++ b/my_home_page.html
@@ -6,6 +6,6 @@
     <title>My Home Page</title>
 </head>
 <body>
-    <p>Welcome to visual studio code</p>
+    <p>Welcome to visual studio codee</p>
 </body>
 </html>
