--- a/my_home_page.html
+++ b/my_home_page.html
@@ -6,6 +6,14 @@
     <title>My Home Page</title>
 </head>
 <body>
-    <p>Welcome to visual studio codee</p>
+    <br>
+    <div style="text-align:center">
+        <img src="kaleab photo.jpg" width = "25%" height = "25%" alt="Owner Image">
+        <h1><b>Kaleab T Ero</b></h1>
+        <ul>
+            <li>Lab 1: Home Page</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
