some formatting on home page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
 </head>
-<body>
+<body style="bord: blue; background-color: aliceblue;">
     <br>
-    <div style="text-align:center">
+    <section style="text-align:center" >
         <img src="kaleab photo.jpg" width = "25%" height = "25%" alt="Owner Image">
         <h1><b>Kaleab T Ero</b></h1>
         <ul>
             <li>Lab 1: Home Page</li>
         </ul>
-    </div>
-    
+    </section>
+    <br>
+        <br>
+        <br>
+        <br>
+    <footer>  
+    <div>&copy; 2020 - Kaleab T Tadewos </div>
+    </footer>
 </body>
 </html>
