--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
 </head>
-<body style="bord: blue; background-color: aliceblue;">
+<body>
     <br>
     <section style="text-align:center" >
         <img src="kaleab photo.jpg" width = "25%" height = "25%" alt="Owner Image">
