--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>Lab 1: Home Page</li>
         </ul>
     </section>
+    <p><a href="https://validator.w3.org/check/referer">Click here to check your website</a></p>
     <br>
         <br>
         <br>
