--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <br>
     <section style="text-align:center" >
-        <img src="kaleab_photo.jpg" width = "25%" height = "25%" alt="Owner Image">
+        <img src="kaleab_photo.jpg" width = "25" height = "25" alt="Owner Image">
         <h1><b>Kaleab T Ero</b></h1>
         <ul>
             <li>Lab 1: Home Page</li>
