resizing images and remove css codes from the html code

--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
 </head>
 <body>
     <br>
-    <section style="text-align:center" >
-        <img src="kaleab_photo.jpg" width = "25" height = "25" alt="Owner Image">
+    <section>
+        <img src="images/kaleab_photo.jpg" alt="Owner Image">
         <h1><b>Kaleab T Ero</b></h1>
         <ul>
-            <li>Lab 1: Home Page</li>
+            <li><a href="#">Lab 1: Home Page</a></li>
+            <li><a href="#">Lab 2: About me</a></li>
+            <li><a href="#">Lab 3: Recipe</a></li>
+            <li><a href="#">Lab 4: Movie Review</a</li>
+            <li><a href="#">Lab 5: MP3 Library</a></li>
         </ul>
     </section>
-    <p><a href="https://validator.w3.org/nu/">Click here to check your website</a></p>
+    <div>
+        <p><a href="https://validator.w3.org/nu/">
+            <img src="images/validator_logo.png" alt="validator logo">
+        </a></p>
+    </div>
+    
     <br>
-        <br>
-        <br>
-        <br>
+    <br>
     <footer>  
     <div>&copy; 2020 - Kaleab T Tadewos </div>
     </footer>
