update validator address

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </section>
     <div>
-        <p><a href="https://validator.w3.org/validator/referer"><p>
+        <p><a href="https://validator.w3.org/check/referer"><p>
             <img src="images/validator_logo.png" alt="validator logo">
         </a></p>
     </div>
