--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <li><a href="#">Lab 1: Home Page</a></li>
             <li><a href="#">Lab 2: About me</a></li>
             <li><a href="#">Lab 3: Recipe</a></li>
-            <li><a href="#">Lab 4: Movie Review</a</li>
+            <li><a href="#">Lab 4: Movie Review</a></li>
             <li><a href="#">Lab 5: MP3 Library</a></li>
         </ul>
     </section>
     <div>
-        <p><a href="https://validator.w3.org/check/referer"><p>
+        <p><a href="https://validator.w3.org/check/referer">
             <img src="images/validator_logo.png" alt="validator logo">
         </a></p>
     </div>
