adding about me and recipe pages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <img src="images/kaleab_photo.jpg" alt="Owner Image">
         <h1><b>Kaleab T Ero</b></h1>
         <ul>
-            <li><a href="#">Lab 1: Home Page</a></li>
-            <li><a href="#">Lab 2: About me</a></li>
-            <li><a href="#">Lab 3: Recipe</a></li>
+            <li><a href="index.html">Lab 1: Home Page</a></li>
+            <li><a href="views/aboutme.html">Lab 2: About me</a></li>
+            <li><a href="views/recipe.html">Lab 3: Recipe</a></li>
             <li><a href="#">Lab 4: Movie Review</a></li>
             <li><a href="#">Lab 5: MP3 Library</a></li>
         </ul>
