finalalized recipe page

--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>My Home Page</title>
 </head>
+
 <body>
-<br>
+    <br>
     <section>
         <img src="images/kaleab_photo.jpg" alt="Owner Image">
         <h1><b>Kaleab T Ero</b></h1>
         <ul>
             <li><a href="index.html">Lab 1: Home Page</a></li>
             <li><a href="views/aboutme.html">Lab 2: About me</a></li>
-            <li><a href="views/recipe.html">Lab 3: Recipe</a></li>
+            <li><a href="views/pie.html">Lab 3: Recipe</a></li>
             <li><a href="views/wrapper.html">Lab 4: Movie Review</a></li>
             <li><a href="#">Lab 5: MP3 Library</a></li>
         </ul>
     </section>
     <div>
-        <p><a href="https://validator.w3.org/check/referer">
-            <img src="images/validator_logo.png" alt="validator logo">
-        </a></p>
+        <p>
+            <a href="https://validator.w3.org/check/referer">
+                <img src="images/validator_logo.png" alt="validator logo">
+            </a>
+        </p>
     </div>
-    
+
     <br>
     <br>
-    <footer>  
-    <div>&copy; 2020 - Kaleab T Tadewos </div>
+    <footer>
+        <div>&copy; 2020 - Kaleab T Tadewos </div>
     </footer>
-    
+
 </body>
+
 </html>
