initial setup and add a background for movie review page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="index.html">Lab 1: Home Page</a></li>
             <li><a href="views/aboutme.html">Lab 2: About me</a></li>
             <li><a href="views/pie.html">Lab 3: Recipe</a></li>
-            <li><a href="#">Lab 4: Movie Review</a></li>
+            <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
             <li><a href="#">Lab 5: MP3 Library</a></li>
         </ul>
     </section>
