create web form in css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <li><a href="views/aboutme.html">Lab 2: About me</a></li>
             <li><a href="views/pie.html">Lab 3: Recipe</a></li>
             <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
-            <li><a href="#">Lab 5: MP3 Library</a></li>
+            <li><a href="views/web_form_1.html">Lab 5: Web Form 1</a></li>
+            <li><a href="views/web_form_2.html">Lab 5 - 2: Web Form 2</a></li>
         </ul>
     </section>
     <div>
