--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 </head>
 
 <body>
-    <br>
-    <section>
-        <img src="images/kaleab_photo.jpg" alt="Owner Image">
-        <h1><b>Kaleab T Ero</b></h1>
-        <ul>
-            <li><a href="index.html">Lab 1: Home Page</a></li>
-            <li><a href="views/aboutme.html">Lab 2: About me</a></li>
-            <li><a href="views/pie.html">Lab 3: Recipe</a></li>
-            <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
-            <li><a href="views/web_form_1.html">Lab 5: Web Form 1</a></li>
-            <li><a href="views/web_form_2.html">Lab 5 - 2: Web Form 2</a></li>
-        </ul>
-    </section>
-    <div>
-        <p>
-            <a href="https://validator.w3.org/check/referer">
-                <img src="images/validator_logo.png" alt="validator logo">
-            </a>
-        </p>
+    <div id="content">
+        <div id="menus">
+            <img src="images/kaleab_photo.jfif" alt="Owner Image">
+            <h1><b>Kaleab T Ero</b></h1>
+            <ul>
+                <li><a href="index.html">Lab 1: Home Page</a></li>
+                <li><a href="views/aboutme.html">Lab 2: About me</a></li>
+                <li><a href="views/pie.html">Lab 3: Recipe</a></li>
+                <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
+                <li><a href="views/web_form_1.html">Lab 5: Web Form 1</a></li>
+                <li><a href="views/web_form_2.html">Lab 5 - 2: Web Form 2</a></li>
+            </ul>
+
+            <div>&copy; 2020 - Kaleab T Tadewos </div>
+        </div>
     </div>
 
-    <br>
-    <br>
+
+
+    <p class="page-validator">
+        <a href="https://validator.w3.org/check/referer">
+            <img src="images/validator_logo.png" alt="validator logo">
+        </a>
+    </p>
+
     <footer>
-        <div>&copy; 2020 - Kaleab T Tadewos </div>
+
     </footer>
 
 </body>
