lab 5 assignment changes
the remaining part is the last question and add validators

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
                 <li><a href="views/web_form_1.html">Lab 5: Web Form 1</a></li>
                 <li><a href="views/web_form_2.html">Lab 5 - 2: Web Form 2</a></li>
+                <li><a href="views/scripts.html">Lab 6</a></li>
             </ul>
 
             <div>&copy; 2020 - Kaleab T Tadewos </div>
