--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <li><a href="views/tmnt.html">Lab 4: Movie Review</a></li>
                 <li><a href="views/web_form_1.html">Lab 5: Web Form 1</a></li>
                 <li><a href="views/web_form_2.html">Lab 5 - 2: Web Form 2</a></li>
-                <li><a href="views/scripts.html">Lab 6</a></li>
+                <li><a href="views/scripts.html">W1-D5 : Intro to Javascript</a></li>
+                <li><a href="views/decoratemytext.html">W1D6 - Decorate - Working with the DOM</a></li>
             </ul>
 
             <div>&copy; 2020 - Kaleab T Tadewos </div>
